--- a/estilos.css
+++ b/estilos.css
@@ -21,6 +21,9 @@ body {
 #inicio__visitar--promo4 {
   background-color: #000;
 }
+.modal-personalizacion{
+  color:#3f4142;
+}
 #nosotros,
 #contacto,
 #fotos {
