--- a/estilos.css
+++ b/estilos.css
@@ -21,8 +21,8 @@ body {
 #inicio__visitar--promo4 {
   background-color: #000;
 }
-.modal-personalizacion{
-  color:#3f4142;
+.modal-personalizacion {
+  color: #3f4142;
 }
 #nosotros,
 #contacto,
@@ -30,18 +30,26 @@ body {
   background-color: #292b2c;
   color: #fff;
 }
-#img-nosotros{
+#img-nosotros {
   filter: grayscale(70%);
 }
-#img-nosotros:hover{
+#img-nosotros:hover {
   filter: grayscale(0);
   transition: all 1s;
 }
-
-.icon-personalizacion, .links-personalizacion {
+.enlace-personalizacion::before {
+  /* display: block;
+  background-color: red;
+  content: " ";
+  margin-top: -55px;
+  height: 55px;
+  visibility: hidden;*/
+} 
+.icon-personalizacion,
+.links-personalizacion {
   color: rgb(167, 166, 166);
 }
-.icon-personalizacion{
+.icon-personalizacion {
   font-size: 35px;
 }
 
